latest ms draft edits

--- a/writing/Manuscript_2022.Rmd
+++ b/writing/Manuscript_2022.Rmd
@@ -342,16 +342,14 @@ However, we did observe a main effect of geographical site: children in Beijing,
 
 To follow up on this effect of site, we tested two potential sources of variation: visuomotor control and effort. 
 Insofar as differences in visuomotor control could explain differences between groups, we reasoned that this would manifest as a difference in tracing ability that predicts variation in drawing recognizability. 
-Instead, we found that children across the two sites were indistinguishable with respect to tracing ability on average (Figure \ref{fig:tracing}), although individual tracing scores were strong predictors of the recognizablity of their own drawings, as in prior work [@long2021parallel]. 
+Instead, we found that children across the two sites were indistinguishable with respect to tracing ability on average (Figure \ref{fig:tracing}), although individual tracing scores were strong predictors of the recognizability of their own drawings, as in prior work [@long2021parallel]. 
 Next, we evaluated whether there were systematic differences in effort between the two groups, as measured by the amount of time each child spent producing their drawings and the number of strokes drawn. 
 Figure \ref{fig:effort-covariates} shows three effort covariates -- average intensity, number of strokes used, and time spent drawing -- measured for each drawing as a function of children's age, drawing task, and geographical site.  
 We found that children spent more time drawing when prompted with a picture cue than a verbal cue, and that children in the Beijing group spent more time on their drawings than their counterparts in San Jose.
 
 We then included children's average tracing scores and effort covariates measured for each drawing (average intensity, number of strokes used, and time spent drawing) as fixed effects into a second generalized linear mixed-effects model (see Statistical Models). 
 If effort and/or tracing ability is sufficient to account for the differences between sites, we reasoned that we should no longer observe a main effect of geographical site on drawing recognizability in this expanded statistical model.
-Instead, we observed a significant effect of geographical site (see Table 2), even after having accounted for the effect of individual differences in tracing ability. We also found that the amount of time a child spent drawing negatively predicted recognizability -- indicating that spending more time on a drawing did not necessarily result in a more recognizable drawing. Together, these results suggest that these site differences in the ability to produce recognizable drawings are not explained by differences in effort or tracing ability. 
-
-**JEFAN QUERY: I noticed that while draw duration was a negative predictor of recognizability, number of strokes was a positive predictor. We comment on the former, but not the latter. Could it be potentially confusing to a reader if we do not mention the latter?**
+Instead, we observed a significant effect of geographical site (see Table 2), even after having accounted for the effect of individual differences in tracing ability as well as effort covariates for each drawing that was produced. Nonetheless, children's tracing abilities were clearly related to the degree they were able to produce recognizable drawings. Together, these results suggest that these site differences in the ability to produce recognizable drawings are not explained by differences in effort or tracing ability. 
 
 ### Exploratory Analyses
 In a set of exploratory analyses, we examined how the developmental trajectory for drawing recognizability varied across object categories. For example, some object categories (e.g., cat) may be easier to draw than others (e.g., watch), resulting in shallower or steeper changes in recognizability over age. However, we did not have strong hypotheses about how these trajectories might additionally vary with geographical locations. 
@@ -590,26 +588,17 @@ To evaluate the generality of our findings, we recruited two groups of children 
 We found steady improvement from 4-9 years of age in both groups of children, replicating prior work conducted in a field setting [@long2021parallel].
 We did not find an effect of cue type, however, suggesting that younger children's drawings are unlikely to be constrained by their ability to recall category-diagnostic visual features when they are trying to draw them. 
 
-On the other hand, we discovered that drawing recognizability differed between sites, with children in the Beijing group having produced more recognizable drawings than those in the San Jose group. 
-In follow-up analyses, we found that while there was substantial individual variation in tracing ability and effort, these covariates were insufficient to account for differences in drawing recognizability between groups. 
+<!-- Why might we have not observed an effect of cue type? In related work with adults, @yang2021 found that providing adults with photograph cues of these same categories led to more recognizable drawings of object categories. Thus, one possibility is that children have yet to develop the skill -->
+
+We also discovered that drawing recognizability differed between sites, with children in the Beijing group having produced more recognizable drawings than those in the San Jose group. In follow-up analyses, we found that while there was substantial individual variation in tracing ability and effort, these covariates were insufficient to account for differences in drawing recognizability between groups. 
 We also discovered that the groups differed with respect to which visual concepts were easier for children to convey in their drawings, perhaps reflecting different patterns of exposure to these concepts. 
-While these group-level differences are intriguing, they remain consistent with wide variety of potential explanations.
-Further systematic measurement of drawing behavior across a wider variety of geographical, socioeconomic, and cultural contexts will be crucial for producing more robust and precise estimates of developmental variability, critical to strongly evaluate causal theories of such variation [@amir2020cross; @carstensen2021investigating; @frank2021variability].
-On the other hand, without such datasets it can be tempting to draw unwarranted causal inferences about the impact of single demographic covariates, such as nationality [@winner1989can; @kuwabara2016cultural].
-We have thus made our drawing dataset publicly available to contribute to this more cumulative effort and also to reduce barriers to investigation of other aspects of these drawings other than their recognizability, such as which visual features children prioritized in their drawings, the order in which they drew them, as well as variation in visual style [@gernhardt2015cultural; @senzaki2014holistic]. 
 
-Another natural question for future work concerns the relationship between the kind of experience children have with these visual concepts and the way they produce drawings of them.
-For example, if some children are exposed to a wide variety of illustrations of some concepts but not others (e.g., in books or other media), they may also be able to produce more recognizable drawings of those concepts. 
-Conversely, if some children spend more time drawing certain visual concepts but not others (e.g., in school or at home), they may also be better at recognizing graphical representations of them in other contexts, and perhaps explicitly identifying their diagnostic features. 
-Prior work has found that older children not only produce more recognizable drawings of object categories, but also tend to be better at recognizing other children's drawings [@long2021parallel], providing evidence that visual production and recognition abilities are related throughout childhood at the group level.
-However, further investigation will be necessary for understanding what kinds of experience are responsible for concurrent developmental changes in these two behaviors at the individual level.
+While these group-level differences are intriguing, they remain consistent with wide variety of potential explanations. Further systematic measurement of drawing behavior across a wider variety of geographical, socioeconomic, and cultural contexts will be crucial for producing more robust and precise estimates of developmental variability, critical to strongly evaluate causal theories of such variation [@amir2020cross; @carstensen2021investigating; @frank2021variability]. On the other hand, without such datasets it can be tempting to draw unwarranted causal inferences about the impact of single demographic covariates, such as nationality [@winner1989can; @kuwabara2016cultural]. We have thus made our drawing dataset publicly available to contribute to this more cumulative effort and also to reduce barriers to investigation of other aspects of these drawings other than their recognizability, such as which visual features children prioritized in their drawings, the order in which they drew them, as well as variation in visual style [@gernhardt2015cultural; @senzaki2014holistic]. 
 
-**JEFAN QUERY: We currently do not have a paragraph that expands on the null effect of cue type. Though perhaps we could, for "balance?"**
+Another natural question for future work concerns the relationship between the kind of experience children have with these visual concepts and the way they produce drawings of them. For example, if some children are exposed to a wide variety of illustrations of some concepts but not others (e.g., in books or other media), they may also be able to produce more recognizable drawings of those concepts. Conversely, if some children spend more time drawing certain visual concepts but not others (e.g., in school or at home), they may also be better at recognizing graphical representations of them in other contexts, and perhaps explicitly identifying their diagnostic features. Prior work has found that older children not only produce more recognizable drawings of object categories, but also tend to be better at recognizing other children's drawings [@long2021parallel], providing evidence that visual production and recognition abilities are related throughout childhood at the group level. However, further investigation will be necessary for understanding what kinds of experience are responsible for concurrent developmental changes in these two behaviors at the individual level.
 
-In sum, our findings advance our understanding of the relative impact of age, task settings, and geographical context on the ability of children to communicate their knowledge about familiar visual concepts by drawing. 
-More broadly, we believe our approach to concurrently quantifying multiple sources of variation in the context of rich, naturalistic behaviors will lead to more robust and unified theories of cognitive development. 
+In sum, our findings advance our understanding of the relative impact of age, task settings, and geographical context on the ability of children to communicate their knowledge about familiar visual concepts by drawing. More broadly, we believe our approach to concurrently quantifying multiple sources of variation in the context of rich, naturalistic behaviors will lead to more robust and unified theories of cognitive development. 
 
-**JEFAN QUERY: Is there any way to hijack this APA template to force figures/tables to appear in the text close to where they are mentioned, rather than all the way at the end?**
 
 # Acknowledgements  
 [BLINDED]
