--- a/writing/Manuscript_2022.Rmd
+++ b/writing/Manuscript_2022.Rmd
@@ -456,7 +456,7 @@ rownames(full_model_with_effort_out$coefficients)<-cleaned_names_full_model_with
   \hline
 Intercept & 1.34 & 0.15 & 8.68 & 0.000 \\ 
   Task & -0.04 & 0.26 & -0.16 & 0.873 \\ 
-  Age & 0.97 & 0.14 & 7.05 & 0.000 \\ 
+  Age & 0.97 & 0.14 & 7.05 & 0.000 \\ 24
   Site & 0.80 & 0.16 & 5.04 & 0.000 \\ 
   Est. tracing score & 0.35 & 0.07 & 4.82 & 0.000 \\ 
   Avg. intensity & 0.06 & 0.02 & 2.47 & 0.013 \\ 
