--- a/experiments/part_annotations/stimuli/preprocess_devphotodraw_labels.ipynb
+++ b/experiments/part_annotations/stimuli/preprocess_devphotodraw_labels.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -296,285 +296,195 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>watch</td>\n",
-       "      <td>crown</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>watch</td>\n",
-       "      <td>hour hand</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
        "      <td>house</td>\n",
        "      <td>door</td>\n",
        "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>14</th>\n",
        "      <td>house</td>\n",
        "      <td>window</td>\n",
        "      <td>62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>15</th>\n",
        "      <td>house</td>\n",
        "      <td>roof</td>\n",
        "      <td>58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>16</th>\n",
        "      <td>house</td>\n",
        "      <td>wall</td>\n",
        "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>17</th>\n",
        "      <td>house</td>\n",
        "      <td>chimney</td>\n",
        "      <td>22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>18</th>\n",
        "      <td>house</td>\n",
        "      <td>garage</td>\n",
        "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>19</th>\n",
        "      <td>house</td>\n",
        "      <td>porch</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>20</th>\n",
        "      <td>house</td>\n",
        "      <td>kitchen</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>21</th>\n",
        "      <td>house</td>\n",
        "      <td>bedroom</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
+       "      <th>22</th>\n",
        "      <td>house</td>\n",
        "      <td>driveway</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <th>23</th>\n",
        "      <td>house</td>\n",
        "      <td>floor</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>house</td>\n",
-       "      <td>bathroom</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>house</td>\n",
-       "      <td>light</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>house</td>\n",
-       "      <td>room</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>house</td>\n",
-       "      <td>living room</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
+       "      <th>24</th>\n",
        "      <td>chair</td>\n",
        "      <td>leg</td>\n",
        "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>31</th>\n",
+       "      <th>25</th>\n",
        "      <td>chair</td>\n",
        "      <td>seat</td>\n",
        "      <td>61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32</th>\n",
+       "      <th>26</th>\n",
        "      <td>chair</td>\n",
        "      <td>back</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
+       "      <th>27</th>\n",
        "      <td>chair</td>\n",
        "      <td>cushion</td>\n",
        "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34</th>\n",
+       "      <th>28</th>\n",
        "      <td>chair</td>\n",
        "      <td>arm</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>35</th>\n",
+       "      <th>29</th>\n",
        "      <td>chair</td>\n",
        "      <td>backrest</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
+       "      <th>30</th>\n",
        "      <td>chair</td>\n",
        "      <td>armrest</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>37</th>\n",
+       "      <th>31</th>\n",
        "      <td>chair</td>\n",
        "      <td>back rest</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>chair</td>\n",
-       "      <td>arm rest</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>chair</td>\n",
-       "      <td>idk</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>chair</td>\n",
-       "      <td>wood</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>chair</td>\n",
-       "      <td>back support</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>chair</td>\n",
-       "      <td>apron</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>chair</td>\n",
-       "      <td>back base</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>chair</td>\n",
-       "      <td>body</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
+       "      <th>32</th>\n",
        "      <td>bike</td>\n",
        "      <td>wheel</td>\n",
        "      <td>64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46</th>\n",
+       "      <th>33</th>\n",
        "      <td>bike</td>\n",
        "      <td>seat</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47</th>\n",
+       "      <th>34</th>\n",
        "      <td>bike</td>\n",
        "      <td>handle</td>\n",
        "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48</th>\n",
+       "      <th>35</th>\n",
        "      <td>bike</td>\n",
        "      <td>pedal</td>\n",
        "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49</th>\n",
+       "      <th>36</th>\n",
        "      <td>bike</td>\n",
        "      <td>chain</td>\n",
        "      <td>24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50</th>\n",
+       "      <th>37</th>\n",
        "      <td>bike</td>\n",
        "      <td>handlebar</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51</th>\n",
+       "      <th>38</th>\n",
        "      <td>bike</td>\n",
        "      <td>brake</td>\n",
        "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>52</th>\n",
+       "      <th>39</th>\n",
        "      <td>bike</td>\n",
        "      <td>gear</td>\n",
        "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>53</th>\n",
+       "      <th>40</th>\n",
        "      <td>bike</td>\n",
        "      <td>bell</td>\n",
        "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>54</th>\n",
+       "      <th>41</th>\n",
        "      <td>bike</td>\n",
        "      <td>tire</td>\n",
        "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>55</th>\n",
+       "      <th>42</th>\n",
        "      <td>bike</td>\n",
        "      <td>frame</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
+       "      <th>43</th>\n",
        "      <td>bike</td>\n",
        "      <td>handle bar</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>57</th>\n",
+       "      <th>44</th>\n",
        "      <td>bike</td>\n",
        "      <td>basket</td>\n",
        "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>bike</td>\n",
-       "      <td>body</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>59</th>\n",
-       "      <td>bike</td>\n",
-       "      <td>break</td>\n",
-       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -595,62 +505,49 @@
        "10    watch                buckle     6\n",
        "11    watch                  case     5\n",
        "12    watch                 clasp     5\n",
-       "13    watch                 crown     4\n",
-       "14    watch             hour hand     4\n",
-       "15    house                  door    66\n",
-       "16    house                window    62\n",
-       "17    house                  roof    58\n",
-       "18    house                  wall    28\n",
-       "19    house               chimney    22\n",
-       "20    house                garage    13\n",
-       "21    house                 porch    10\n",
-       "22    house               kitchen     8\n",
-       "23    house               bedroom     5\n",
-       "24    house              driveway     5\n",
-       "25    house                 floor     5\n",
-       "26    house              bathroom     4\n",
-       "27    house                 light     4\n",
-       "28    house                  room     4\n",
-       "29    house           living room     3\n",
-       "30    chair                   leg    66\n",
-       "31    chair                  seat    61\n",
-       "32    chair                  back    36\n",
-       "33    chair               cushion    12\n",
-       "34    chair                   arm    10\n",
-       "35    chair              backrest     9\n",
-       "36    chair               armrest     8\n",
-       "37    chair             back rest     6\n",
-       "38    chair              arm rest     3\n",
-       "39    chair                   idk     3\n",
-       "40    chair                  wood     3\n",
-       "41    chair          back support     2\n",
-       "42    chair                 apron     1\n",
-       "43    chair             back base     1\n",
-       "44    chair                  body     1\n",
-       "45     bike                 wheel    64\n",
-       "46     bike                  seat    50\n",
-       "47     bike                handle    33\n",
-       "48     bike                 pedal    29\n",
-       "49     bike                 chain    24\n",
-       "50     bike             handlebar    21\n",
-       "51     bike                 brake    16\n",
-       "52     bike                  gear    14\n",
-       "53     bike                  bell    13\n",
-       "54     bike                  tire    12\n",
-       "55     bike                 frame    10\n",
-       "56     bike            handle bar     7\n",
-       "57     bike                basket     5\n",
-       "58     bike                  body     4\n",
-       "59     bike                 break     4"
+       "13    house                  door    66\n",
+       "14    house                window    62\n",
+       "15    house                  roof    58\n",
+       "16    house                  wall    28\n",
+       "17    house               chimney    22\n",
+       "18    house                garage    13\n",
+       "19    house                 porch    10\n",
+       "20    house               kitchen     8\n",
+       "21    house               bedroom     5\n",
+       "22    house              driveway     5\n",
+       "23    house                 floor     5\n",
+       "24    chair                   leg    66\n",
+       "25    chair                  seat    61\n",
+       "26    chair                  back    36\n",
+       "27    chair               cushion    12\n",
+       "28    chair                   arm    10\n",
+       "29    chair              backrest     9\n",
+       "30    chair               armrest     8\n",
+       "31    chair             back rest     6\n",
+       "32     bike                 wheel    64\n",
+       "33     bike                  seat    50\n",
+       "34     bike                handle    33\n",
+       "35     bike                 pedal    29\n",
+       "36     bike                 chain    24\n",
+       "37     bike             handlebar    21\n",
+       "38     bike                 brake    16\n",
+       "39     bike                  gear    14\n",
+       "40     bike                  bell    13\n",
+       "41     bike                  tire    12\n",
+       "42     bike                 frame    10\n",
+       "43     bike            handle bar     7\n",
+       "44     bike                basket     5"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "subset_top15"
+    "## subset labels that have a frequency of 5+\n",
+    "subset_freq5 = subset_top15.loc[subset_top15['freq'] >= 5].reset_index(drop=True)\n",
+    "subset_freq5"
    ]
   },
   {
