update figures and references

--- a/writing/references.bib
+++ b/writing/references.bib
@@ -697,6 +697,36 @@
 	Volume = {359},
 	Year = {2018}}
 
+@book{frank2021variability,
+  title={Variability and consistency in early language learning: The Wordbank project},
+  author={Frank, Michael C and Braginsky, Mika and Yurovsky, Daniel and Marchman, Virginia A},
+  year={2021},
+  publisher={MIT Press}
+}
+
+@article{mcbride2016chinese,
+  title={Is Chinese special? Four aspects of Chinese literacy acquisition that might distinguish learning Chinese from learning alphabetic orthographies},
+  author={McBride, Catherine Alexandra},
+  journal={Educational Psychology Review},
+  volume={28},
+  number={3},
+  pages={523--549},
+  year={2016},
+  publisher={Springer}
+}
+
+
+@article{mcbride2015learning,
+  title={Learning to read Chinese: Universal and unique cognitive cores},
+  author={McBride, Catherine and Wang, Ying},
+  journal={Child Development Perspectives},
+  volume={9},
+  number={3},
+  pages={196--200},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
 @article{goldstone2001altering,
 	Author = {Goldstone, Robert L and Lippa, Yvonne and Shiffrin, Richard M},
 	Date-Added = {2018-01-31 06:54:57 +0000},
