updates to revision .rmd

--- a/writing/references.bib
+++ b/writing/references.bib
@@ -1818,3 +1818,10 @@
   note = {R package version 0.2.1},
   url = {https://github.com/mariusbarth/tinylabels},
 }
+@Manual{R-NatParksPalettes,
+  title = {NatParksPalettes: Color palette package inspired by National Parks.},
+  author = {Kevin S. Blake},
+  year = {2022},
+  note = {R package version 0.1.0},
+  url = {https://github.com/kevinsblake/NatParksPalettes},
+}
